# dbdata

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
proto/authfiles/: user_dat_file.proto
proto/proto_demux/: demux.proto
proto/proto_denuvo_service/: denuvo_service.proto
proto/proto_download/: download.proto
proto/proto_friends/: friends.proto
proto/proto_game_activations_cache/: game_activations_cache.proto
proto/proto_game_catalog_extension/: game_catalog_extension.proto
proto/proto_game_starter/: game_starter.proto
proto/proto_overlay/: overlay.proto
proto/proto_ownership/: ownership.proto
proto/proto_ownership_cache/: ownership_cache.proto
proto/proto_settings/: common_settings.proto  settings.proto
proto/proto_statistics/: Statistics.proto
proto/proto_uplay/: Uplay.proto
proto/proto_uplay_service/: uplay_service.proto
proto/proto_uplayauxdll/: UplayAuxDll.proto
proto/proto_uplaydll/: UplayDll.proto
proto/proto_user_settings/: user_settings.proto
src/: config.rs  lib.rs  logging.rs  proto.rs  token.rs
src/auth/: demux.rs  flow.rs  login.rs  mod.rs
src/services/: denuvo.rs  mod.rs  ownership.rs
