[package]
name = "ubi-dbdata"
version = "2.0.0"
edition = "2024"

[lib]
name = "dbdata"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.28"
log4rs = "1.4.0"
rust-ini = "0.21.3"
winapi = { version = "0.3.9", features = ["minwindef", "winuser", "libloaderapi"] }

prost = "0.14.3"
prost-types = "0.14.3"

native-tls = "0.2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prost-build = "0.14.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"